# analytische-geometrie

./: .gitignore  LICENSE  README.md  pyproject.toml  temp.py
analytische_geometrie/: __init__.py  __main__.py  ebene.py  gerade.py  punkt.py
analytische_geometrie/geometrie/: __init__.py  ebene.py  fassade.py  punkt.py  wuerfel.py
analytische_geometrie/utils/: vector_utils.py
tests/: test_ebene.py  test_fassade.py  test_gerade.py  test_mix.py
